[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenhelm"
version = "0.1.0rc1"
description = "Lightweight, framework-agnostic token tracking and LLM cost calculation across providers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TokenHelm contributors" }]
keywords = ["llm", "tokens", "cost", "openai", "anthropic", "gemini", "ollama", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
openai = ["openai>=1.0"]
gemini = ["google-genai>=0.1"]
anthropic = ["anthropic>=0.40"]
ollama = ["ollama>=0.1"]
all = ["openai>=1.0", "google-genai>=0.1", "anthropic>=0.40", "ollama>=0.1"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.6", "build>=1.0"]

[project.urls]
Homepage = "https://github.com/quadkeys/tokenhelm"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tokenhelm = ["data/*.yaml", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP042: LLMProvider deliberately subclasses (str, Enum) with an explicit __str__ for broad
# compatibility and stable value semantics. Migrating to enum.StrEnum is a deferrable cleanup,
# not done right before the v0.1 release (it changes a public type's base class).
ignore = ["UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=tokenhelm --cov-report=term-missing --cov-fail-under=90"
markers = ["benchmark: performance/memory budget checks (deselect with -m 'not benchmark')"]

[tool.coverage.run]
source = ["tokenhelm"]
branch = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = false   # CHANGELOG is owned by release-please in CI
major_version_zero = true
